5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1764_1583.log
== TEST (2019-05-22 11:40:01) 
-- CODE:
from numpy import*
a=array(eval(input("string: ")))
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:46:45) 
-- CODE:
from numpy import*
a=array(eval(input("string: ".3)))

print(a)


-- ERROR:
File "XXXX", line 2
    a=array(eval(input("string: ".3)))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:47:01) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))).3

print(a)


-- ERROR:
File "XXXX", line 2
    a=array(eval(input())).3
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:47:42) 
-- CODE:
from numpy import*
a=array(eval(input("string: ",".")))

print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:48:13) 
-- CODE:
from numpy import*
a=array(eval(input("string:"." ")))

print(a)


-- ERROR:
File "XXXX", line 2
    a=array(eval(input("string:"." ")))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:53:04) 
-- CODE:
from numpy import*
a=array(eval(input("string: ")))%3

print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:54:08) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))),".",3

print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:54:46) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))),3 ,"."

print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:55:12) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))),3 

print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:01:18) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))) 

print(a,".",3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:01:43) 
-- CODE:
from numpy import*
a=array(eval(input("string: "))) 

print(a,".")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:12:08) 
-- CODE:
a=int(input("string: "))
b=a*100

print(b)


-- OUTPUT:
12300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 22:12:18) 
-- CODE:
a=int(input("string: "))
b=a*100

print(b)


-- EXECUTION TIME:
0.14743
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
12300
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
12345678900098765432100
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
98765432100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:12:21) 
-- CODE:
a=int(input("string: "))
b=a*100

print(b)


-- OUTPUT:
12300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:12:48) 
-- CODE:
a=int(input("string: "))
b=3

print(b)


-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:48:37) 
-- CODE:
from numpy import*
a=input("string: ")
b=""
i=0
while(i<len(a)):
	i0=i
	i1=i+3
	b=b+a[i0:i1]+"."
print(b[:-1])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:49:47) 
-- CODE:
from numpy import*
a=input("string: ")
b=""
i=0
while(i<len(a)):
	i0=i
	i1=i+3
	b=b+a[i0:i1]+"."
	i=i+3
print(b[:-1])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:50:00) 
-- CODE:
from numpy import*
a=input("string: ")
b=""
i=0
while(i<len(a)):
	i0=i
	i1=i+3
	b=b+a[i0:i1]+"."
	i=i+3
print(b[:-1])


-- EXECUTION TIME:
0.472885
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
